--- a/lilubags/index.html
+++ b/lilubags/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Интернет магазин сумок, сумочек и кошельков.">
     <meta name="keywords" content="">
-    <link href="/styles/main.css" rel="stylesheet">
+    <link href="./styles/main.css" rel="stylesheet">
   </head>
   <body>
     <div class="modalContainer" id="modalConfirmOrder">
@@ -136,7 +136,7 @@
             <div class="productTile__product">
               <div class="productTile__productInner">
                 <div class="productTile__imageWrap">
-                  <div class="productTile__imageScreen"><img class="productTile__image" src="/images/img1.JPG"/></div>
+                  <div class="productTile__imageScreen"><img class="productTile__image" src="./images/img1.JPG"/></div>
                   <div class="productTile__imagePrice">2999 ₽</div>
                   <div class="productTile__imageArrows productTile_disable_left">
                     <button class="horizontalAngle productTile__arrow productTile__arrow_dir_left horizontalAngle_theme_rectangle " id="">
@@ -461,7 +461,7 @@
         </div>
       </div>
     </div>
-    <script src="/scripts/bundle.js"></script>
+    <script src="./scripts/bundle.js"></script>
   </body>
 </html>
 <header class="header">
@@ -582,7 +582,7 @@
                       <div class="containerReturn__buttonCancel">Вернуть</div>
                     </div>
                   </div>
-                  <div class="headerBasket__wrapImage"><img class="headerBasket__image" src="/images/img1.JPG"></div>
+                  <div class="headerBasket__wrapImage"><img class="headerBasket__image" src="./images/img1.JPG"></div>
                   <div class="headerBasket__wrapInfo">
                     <div class="headerBasket__productTitle">Стильный рюкзак с цепочкой</div>
                     <div class="headerBasket__description">Сине-золотой</div>
@@ -620,7 +620,7 @@
   </nav>
 </header>
 <main class="main">
-  <section class="intro"><img class="intro__image" src="/images/girl-x3.png" alt="lilubags сумочки">
+  <section class="intro"><img class="intro__image" src="./images/girl-x3.png" alt="lilubags сумочки">
     <div class="intro__leftGroup">
       <h1 class="intro__title" id="introTitle">Рюкзачки, сумочки <br /> и кошельки</h1>
       <div class="intro__info" id="introInfo">Отправка в любой город, самовывоз Н.Новгород</div>
@@ -641,7 +641,7 @@
       <div class="slider">
         <div class="slider__itemWrap">
           <div class="slider__itemInner">
-            <div class="slider__wrapImage"><img class="slider__image" src="/images/img1.JPG"></div>
+            <div class="slider__wrapImage"><img class="slider__image" src="./images/img1.JPG"></div>
             <div class="slider__itemInfoBackground"></div>
             <div class="slider__itemInfo">
               <div class="slider__itemInfoInner">
@@ -657,7 +657,7 @@
         </div>
         <div class="slider__itemWrap">
           <div class="slider__itemInner">
-            <div class="slider__wrapImage"><img class="slider__image" src="/images/img1.JPG"></div>
+            <div class="slider__wrapImage"><img class="slider__image" src="./images/img1.JPG"></div>
             <div class="slider__itemInfoBackground"></div>
             <div class="slider__itemInfo">
               <div class="slider__itemInfoInner">
@@ -673,7 +673,7 @@
         </div>
         <div class="slider__itemWrap">
           <div class="slider__itemInner">
-            <div class="slider__wrapImage"><img class="slider__image" src="/images/img1.JPG"></div>
+            <div class="slider__wrapImage"><img class="slider__image" src="./images/img1.JPG"></div>
             <div class="slider__itemInfoBackground"></div>
             <div class="slider__itemInfo">
               <div class="slider__itemInfoInner">
@@ -689,7 +689,7 @@
         </div>
         <div class="slider__itemWrap">
           <div class="slider__itemInner">
-            <div class="slider__wrapImage"><img class="slider__image" src="/images/img1.JPG"></div>
+            <div class="slider__wrapImage"><img class="slider__image" src="./images/img1.JPG"></div>
             <div class="slider__itemInfoBackground"></div>
             <div class="slider__itemInfo">
               <div class="slider__itemInfoInner">
@@ -705,7 +705,7 @@
         </div>
         <div class="slider__itemWrap">
           <div class="slider__itemInner">
-            <div class="slider__wrapImage"><img class="slider__image" src="/images/img1.JPG"></div>
+            <div class="slider__wrapImage"><img class="slider__image" src="./images/img1.JPG"></div>
             <div class="slider__itemInfoBackground"></div>
             <div class="slider__itemInfo">
               <div class="slider__itemInfoInner">
@@ -721,7 +721,7 @@
         </div>
         <div class="slider__itemWrap">
           <div class="slider__itemInner">
-            <div class="slider__wrapImage"><img class="slider__image" src="/images/img1.JPG"></div>
+            <div class="slider__wrapImage"><img class="slider__image" src="./images/img1.JPG"></div>
             <div class="slider__itemInfoBackground"></div>
             <div class="slider__itemInfo">
               <div class="slider__itemInfoInner">
@@ -737,7 +737,7 @@
         </div>
         <div class="slider__itemWrap">
           <div class="slider__itemInner">
-            <div class="slider__wrapImage"><img class="slider__image" src="/images/img1.JPG"></div>
+            <div class="slider__wrapImage"><img class="slider__image" src="./images/img1.JPG"></div>
             <div class="slider__itemInfoBackground"></div>
             <div class="slider__itemInfo">
               <div class="slider__itemInfoInner">
@@ -753,7 +753,7 @@
         </div>
         <div class="slider__itemWrap">
           <div class="slider__itemInner">
-            <div class="slider__wrapImage"><img class="slider__image" src="/images/img1.JPG"></div>
+            <div class="slider__wrapImage"><img class="slider__image" src="./images/img1.JPG"></div>
             <div class="slider__itemInfoBackground"></div>
             <div class="slider__itemInfo">
               <div class="slider__itemInfoInner">
@@ -1045,7 +1045,7 @@
         <div class="productTile__product">
           <div class="productTile__productInner">
             <div class="productTile__imageWrap">
-              <div class="productTile__imageScreen"><img class="productTile__image" src="/images/img1.JPG"></div>
+              <div class="productTile__imageScreen"><img class="productTile__image" src="./images/img1.JPG"></div>
               <div class="productTile__imagePrice">2999 ₽</div>
               <div class="productTile__imageArrows productTile_disable_left">
                 <button class="horizontalAngle productTile__arrow productTile__arrow_dir_left horizontalAngle_theme_rectangle " id="">
@@ -1117,7 +1117,7 @@
         <div class="productTile__product">
           <div class="productTile__productInner">
             <div class="productTile__imageWrap">
-              <div class="productTile__imageScreen"><img class="productTile__image" src="/images/img2.JPG"></div>
+              <div class="productTile__imageScreen"><img class="productTile__image" src="./images/img2.JPG"></div>
               <div class="productTile__imagePrice">2999 ₽</div>
               <div class="productTile__imageArrows productTile_disable_left">
                 <button class="horizontalAngle productTile__arrow productTile__arrow_dir_left horizontalAngle_theme_rectangle " id="">
@@ -1189,7 +1189,7 @@
         <div class="productTile__product">
           <div class="productTile__productInner">
             <div class="productTile__imageWrap">
-              <div class="productTile__imageScreen"><img class="productTile__image" src="/images/img3.JPG"></div>
+              <div class="productTile__imageScreen"><img class="productTile__image" src="./images/img3.JPG"></div>
               <div class="productTile__imagePrice">2999 ₽</div>
               <div class="productTile__imageArrows productTile_disable_left">
                 <button class="horizontalAngle productTile__arrow productTile__arrow_dir_left horizontalAngle_theme_rectangle " id="">
@@ -1261,7 +1261,7 @@
         <div class="productTile__product">
           <div class="productTile__productInner">
             <div class="productTile__imageWrap">
-              <div class="productTile__imageScreen"><img class="productTile__image" src="/images/img4.JPG"></div>
+              <div class="productTile__imageScreen"><img class="productTile__image" src="./images/img4.JPG"></div>
               <div class="productTile__imagePrice">2999 ₽</div>
               <div class="productTile__imageArrows productTile_disable_left">
                 <button class="horizontalAngle productTile__arrow productTile__arrow_dir_left horizontalAngle_theme_rectangle " id="">
@@ -1333,7 +1333,7 @@
         <div class="productTile__product">
           <div class="productTile__productInner">
             <div class="productTile__imageWrap">
-              <div class="productTile__imageScreen"><img class="productTile__image" src="/images/img5.JPG"></div>
+              <div class="productTile__imageScreen"><img class="productTile__image" src="./images/img5.JPG"></div>
               <div class="productTile__imagePrice">2999 ₽</div>
               <div class="productTile__imageArrows productTile_disable_left">
                 <button class="horizontalAngle productTile__arrow productTile__arrow_dir_left horizontalAngle_theme_rectangle " id="">
@@ -1405,7 +1405,7 @@
         <div class="productTile__product">
           <div class="productTile__productInner">
             <div class="productTile__imageWrap">
-              <div class="productTile__imageScreen"><img class="productTile__image" src="/images/img6.JPG"></div>
+              <div class="productTile__imageScreen"><img class="productTile__image" src="./images/img6.JPG"></div>
               <div class="productTile__imagePrice">2999 ₽</div>
               <div class="productTile__imageArrows productTile_disable_left">
                 <button class="horizontalAngle productTile__arrow productTile__arrow_dir_left horizontalAngle_theme_rectangle " id="">
