--- a/card-forms/index.html
+++ b/card-forms/index.html
@@ -6,7 +6,9 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
 	<meta name="theme-color" content="#000000" />
 	<link rel="manifest" href="./manifest.json" />
-	<title>React App</title></head>
+	<title>React App</title>
+	<link href="./static/css/2.29f0b9c9.chunk.css" rel="stylesheet">
+</head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
@@ -73,7 +75,7 @@
   var s = n;
   a()
 }([])</script>
-<script src="./static/js/2.226a59f4.chunk.js"></script>
-<script src="./static/js/main.d91b1bd9.chunk.js"></script>
+<script src="./static/js/2.abaff0c9.chunk.js"></script>
+<script src="./static/js/main.56c78161.chunk.js"></script>
 </body>
 </html>
