--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,8 +7,8 @@
 		<meta name="theme-color" content="#b4b4b4">
 		<title>Портфолио</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:500,900&amp;amp;subset=cyrillic-ext">
-		<link rel="stylesheet" href="/css/main.css?v=1557754051711">
-		<link rel="stylesheet" href="css/foundation-icons.css">
+		<link rel="stylesheet" href="./css/main.css?v=1557754051711">
+		<link rel="stylesheet" href=".css/foundation-icons.css">
 	</head>
 	<body>
 		<section class="section-info">
@@ -240,7 +240,7 @@
 				<h2 class="portfolio-item__title">В завершении хотел бы добавить что это не все проекты с которыми мне приходилось работать.</h2>
 			</div>
 		</section>
-		<script src="/js/vendor.js?v=1557754051712"></script>
-		<script src="/js/main.js?v=1557754051712"></script>
+		<script src="./js/vendor.js?v=1557754051712"></script>
+		<script src="./js/main.js?v=1557754051712"></script>
 	</body>
 </html>
