--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,7 @@
 		<title>Портфолио</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:500,900&amp;amp;subset=cyrillic-ext">
 		<link rel="stylesheet" href="./css/main.css?v=1557754051711">
-		<link rel="stylesheet" href=".css/foundation-icons.css">
+		<link rel="stylesheet" href="./css/foundation-icons.css">
 	</head>
 	<body>
 		<section class="section-info">
