--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,12 +12,12 @@
 	</head>
 	<body>
 		<section class="section-info">
-			<div class="paper-card-info"><img class="paper-card-info__avatar" src="/images/avatar.png" alt="avatar">
+			<div class="paper-card-info"><img class="paper-card-info__avatar" src="./images/avatar.png" alt="avatar">
 				<div class="paper-card-info__wrap-inputs" id="infoInputs">
 					<input class="input" placeholder="имя" id="infoName"/>
 					<input class="input" placeholder="дата рождения" id="infoDob"/>
 					<input class="input" placeholder="город" id="infoCity"/>
-					<input class="input" placeholder="контактные данные" id="infoContacts"/><img class="stamp" id="infoStamp" src="/images/stamp.png" alt="stamp">
+					<input class="input" placeholder="контактные данные" id="infoContacts"/><img class="stamp" id="infoStamp" src="./images/stamp.png" alt="stamp">
 				</div>
 			</div>
 			<div class="paper-card-skills">
@@ -82,7 +82,7 @@
 				</div>
 			</div>
 			<div class="grid-x paper-card-js-level">
-				<div class="cell small-12 medium-6 large-6 level-js-meter"><img class="level-js-meter__image-scale" src="/images/scale.png" alt="javascript scale"><img class="level-js-meter__image-arrow" id="jsScaleArrow" src="/images/arrow.png" alt="arrow"></div>
+				<div class="cell small-12 medium-6 large-6 level-js-meter"><img class="level-js-meter__image-scale" src="./images/scale.png" alt="javascript scale"><img class="level-js-meter__image-arrow" id="jsScaleArrow" src="./images/arrow.png" alt="arrow"></div>
 				<div class="cell medium-6 large-6 level-js-counter">
 					<div class="level-js-counter__text">Мой уровень владения <br/> Java Script</div>
 					<div class="level-js-counter__count" id="jsLevelCount">0</div>
