--- a/green-decking/index.html
+++ b/green-decking/index.html
@@ -7,7 +7,7 @@
 		<meta name="theme-color" content="#EBEBEB">
 		<title>ГринДекинг</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:500,900&amp;amp;subset=cyrillic-ext">
-		<link rel="stylesheet" href="/css/main.css?v=1558874955361">
+		<link rel="stylesheet" href="./css/main.css?v=1558874955361">
 	</head>
 	<body>
 		<header>
@@ -48,35 +48,35 @@
 				эл. почта: schebenpesok52@yandex.ru
 			</div>
 			<ul class="services__orders">
-				<li class="order"><img class="order__image" src="../images/materials/Щебень известняковый М400.png" alt="Щебень известняковый М400"/>
+				<li class="order"><img class="order__image" src="./images/materials/Щебень известняковый М400.png" alt="Щебень известняковый М400"/>
 					<div class="order__title">Щебень известняковый М400</div>
 					<div class="order__price">850 руб/т (фракция 20-40)</div>
 				</li>
-				<li class="order"><img class="order__image" src="../images/materials/Щебень известняковый М600.png" alt="Щебень известняковый М600"/>
+				<li class="order"><img class="order__image" src="./images/materials/Щебень известняковый М600.png" alt="Щебень известняковый М600"/>
 					<div class="order__title">Щебень известняковый М600</div>
 					<div class="order__price">950 руб/т (фракция ) <br> 900 руб./т (40-70)</div>
 				</li>
-				<li class="order"><img class="order__image" src="../images/materials/Песок карьерный.png" alt="Песок карьерный"/>
+				<li class="order"><img class="order__image" src="./images/materials/Песок карьерный.png" alt="Песок карьерный"/>
 					<div class="order__title">Песок карьерный</div>
 					<div class="order__price">300 руб/т</div>
 				</li>
-				<li class="order"><img class="order__image" src="../images/materials/Песок речной (ГОСТ).png" alt="Песок речной (ГОСТ)"/>
+				<li class="order"><img class="order__image" src="./images/materials/Песок речной (ГОСТ).png" alt="Песок речной (ГОСТ)"/>
 					<div class="order__title">Песок речной (ГОСТ)</div>
 					<div class="order__price">400 руб/т</div>
 				</li>
-				<li class="order"><img class="order__image" src="../images/materials/Гранитный щебень.png" alt="Гранитный щебень"/>
+				<li class="order"><img class="order__image" src="./images/materials/Гранитный щебень.png" alt="Гранитный щебень"/>
 					<div class="order__title">Гранитный щебень</div>
 					<div class="order__price">2100 руб./т (20-40, 40-70) <br> 2200 руб./т (5,10-5,20)</div>
 				</li>
-				<li class="order"><img class="order__image" src="../images/materials/ОПГС.png" alt="ОПГС"/>
+				<li class="order"><img class="order__image" src="./images/materials/ОПГС.png" alt="ОПГС"/>
 					<div class="order__title">ОПГС</div>
 					<div class="order__price">1000-1050 руб./т (для Нижнего Новгорода )<br> 1250-1350 руб./т (для области)</div>
 				</li>
-				<li class="order"><img class="order__image" src="../images/materials/Грунт плодородный (чёрный).png" alt="Грунт плодородный (чёрный)"/>
+				<li class="order"><img class="order__image" src="./images/materials/Грунт плодородный (чёрный).png" alt="Грунт плодородный (чёрный)"/>
 					<div class="order__title">Грунт плодородный (чёрный)</div>
 					<div class="order__price">900-1000 руб./т</div>
 				</li>
-				<li class="order"><img class="order__image" src="../images/materials/Керамзит.png" alt="Керамзит"/>
+				<li class="order"><img class="order__image" src="./images/materials/Керамзит.png" alt="Керамзит"/>
 					<div class="order__title">Керамзит</div>
 					<div class="order__price">2400 руб./куб</div>
 				</li>
@@ -87,19 +87,19 @@
 			<h2 class="servicesEquipment__title">Услуги и аренда <br> спецтехники</h2>
 			<div class="servicesEquipment__ordersEquipment">
 				<div class="orderEquipment">
-					<div class="orderEquipment__title">Самосвалы</div><img class="orderEquipment__image" src="../images/equipments/Самосвал.png" alt="Самосвалы"/>
+					<div class="orderEquipment__title">Самосвалы</div><img class="orderEquipment__image" src="./images/equipments/Самосвал.png" alt="Самосвалы"/>
 					<div class="orderEquipment__price">1500 руб/час (автопарк — 11 самосвалов!)</div>
 				</div>
 				<div class="orderEquipment">
-					<div class="orderEquipment__title">Погрузчик</div><img class="orderEquipment__image" src="../images/equipments/Погрузчик.png" alt="Погрузчик"/>
+					<div class="orderEquipment__title">Погрузчик</div><img class="orderEquipment__image" src="./images/equipments/Погрузчик.png" alt="Погрузчик"/>
 					<div class="orderEquipment__price">1500 руб/час</div>
 				</div>
 				<div class="orderEquipment">
-					<div class="orderEquipment__title">Экскаватор</div><img class="orderEquipment__image" src="../images/equipments/Экскаватор.png" alt="Экскаватор"/>
+					<div class="orderEquipment__title">Экскаватор</div><img class="orderEquipment__image" src="./images/equipments/Экскаватор.png" alt="Экскаватор"/>
 					<div class="orderEquipment__price">1600-1900 руб/час</div>
 				</div>
 				<div class="orderEquipment">
-					<div class="orderEquipment__title">Бульдозер</div><img class="orderEquipment__image" src="../images/equipments/Бульдозер.png" alt="Бульдозер"/>
+					<div class="orderEquipment__title">Бульдозер</div><img class="orderEquipment__image" src="./images/equipments/Бульдозер.png" alt="Бульдозер"/>
 					<div class="orderEquipment__price">3000 руб/час</div>
 				</div>
 			</div>
@@ -112,22 +112,22 @@
 		<section class="advantages" id="advantages">
 			<h2 class="advantages__title">Наши преимущества</h2>
 			<div class="advantages__wrapItems">
-				<div class="iconText"><img class="iconText__icon" src="../images/icons/icon-phone.svg"/>
+				<div class="iconText"><img class="iconText__icon" src="./images/icons/icon-phone.svg"/>
 					<div class="iconText__text">Работаем круглосуточно <br> и без выходных</div>
 				</div>
-				<div class="iconText"><img class="iconText__icon" src="../images/icons/icon-excavator.svg"/>
+				<div class="iconText"><img class="iconText__icon" src="./images/icons/icon-excavator.svg"/>
 					<div class="iconText__text">Спецтехника высокого <br> качества</div>
 				</div>
-				<div class="iconText"><img class="iconText__icon" src="../images/icons/icon-truck.svg"/>
+				<div class="iconText"><img class="iconText__icon" src="./images/icons/icon-truck.svg"/>
 					<div class="iconText__text">Собственный парк <br> самосвалов</div>
 				</div>
-				<div class="iconText"><img class="iconText__icon" src="../images/icons/icon-map-marker.svg"/>
+				<div class="iconText"><img class="iconText__icon" src="./images/icons/icon-map-marker.svg"/>
 					<div class="iconText__text">Работаем по городу и всей <br> Нижегородскойобласти</div>
 				</div>
-				<div class="iconText"><img class="iconText__icon" src="../images/icons/icon-handshake.svg"/>
+				<div class="iconText"><img class="iconText__icon" src="./images/icons/icon-handshake.svg"/>
 					<div class="iconText__text">Работаем с физическими <br> и юридическими лицами</div>
 				</div>
-				<div class="iconText"><img class="iconText__icon" src="../images/icons/icon-calc.svg"/>
+				<div class="iconText"><img class="iconText__icon" src="./images/icons/icon-calc.svg"/>
 					<div class="iconText__text">Наличный и <br> безналичный расчёт</div>
 				</div>
 			</div>
@@ -286,6 +286,6 @@
 						</svg></a></div>
 			</div>
 		</footer>
-		<script src="/js/main.js?v=1558874955362"></script>
+		<script src="./js/main.js?v=1558874955362"></script>
 	</body>
 </html>
