--- a/green-decking/index.html
+++ b/green-decking/index.html
@@ -7,7 +7,7 @@
 		<meta name="theme-color" content="#EBEBEB">
 		<title>ГринДекинг</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:500,900&amp;amp;subset=cyrillic-ext">
-		<link rel="stylesheet" href="./css/main.css?v=1558874955361">
+		<link rel="stylesheet" href="./css/main.css?v=1558952375545">
 	</head>
 	<body>
 		<header>
@@ -50,57 +50,57 @@
 			<ul class="services__orders">
 				<li class="order"><img class="order__image" src="./images/materials/Щебень известняковый М400.png" alt="Щебень известняковый М400"/>
 					<div class="order__title">Щебень известняковый М400</div>
-					<div class="order__price">850 руб/т (фракция 20-40)</div>
+					<div class="order__price">от 750 руб./т</div>
 				</li>
 				<li class="order"><img class="order__image" src="./images/materials/Щебень известняковый М600.png" alt="Щебень известняковый М600"/>
 					<div class="order__title">Щебень известняковый М600</div>
-					<div class="order__price">950 руб/т (фракция ) <br> 900 руб./т (40-70)</div>
-				</li>
-				<li class="order"><img class="order__image" src="./images/materials/Песок карьерный.png" alt="Песок карьерный"/>
-					<div class="order__title">Песок карьерный</div>
-					<div class="order__price">300 руб/т</div>
-				</li>
-				<li class="order"><img class="order__image" src="./images/materials/Песок речной (ГОСТ).png" alt="Песок речной (ГОСТ)"/>
-					<div class="order__title">Песок речной (ГОСТ)</div>
-					<div class="order__price">400 руб/т</div>
+					<div class="order__price">от 800 руб./т</div>
 				</li>
 				<li class="order"><img class="order__image" src="./images/materials/Гранитный щебень.png" alt="Гранитный щебень"/>
 					<div class="order__title">Гранитный щебень</div>
-					<div class="order__price">2100 руб./т (20-40, 40-70) <br> 2200 руб./т (5,10-5,20)</div>
+					<div class="order__price">от 2000 руб./т</div>
 				</li>
 				<li class="order"><img class="order__image" src="./images/materials/ОПГС.png" alt="ОПГС"/>
 					<div class="order__title">ОПГС</div>
-					<div class="order__price">1000-1050 руб./т (для Нижнего Новгорода )<br> 1250-1350 руб./т (для области)</div>
+					<div class="order__price">от 900 руб./т</div>
+				</li>
+				<li class="order"><img class="order__image" src="./images/materials/Песок карьерный.png" alt="Песок карьерный"/>
+					<div class="order__title">Песок карьерный</div>
+					<div class="order__price">от 200 руб./т</div>
+				</li>
+				<li class="order"><img class="order__image" src="./images/materials/Песок речной (ГОСТ).png" alt="Песок речной (ГОСТ)"/>
+					<div class="order__title">Песок речной (ГОСТ)</div>
+					<div class="order__price">от 300 руб./т</div>
 				</li>
 				<li class="order"><img class="order__image" src="./images/materials/Грунт плодородный (чёрный).png" alt="Грунт плодородный (чёрный)"/>
 					<div class="order__title">Грунт плодородный (чёрный)</div>
-					<div class="order__price">900-1000 руб./т</div>
+					<div class="order__price">от 800 руб./куб</div>
 				</li>
 				<li class="order"><img class="order__image" src="./images/materials/Керамзит.png" alt="Керамзит"/>
 					<div class="order__title">Керамзит</div>
-					<div class="order__price">2400 руб./куб</div>
+					<div class="order__price">от 2300 руб./куб</div>
 				</li>
 			</ul>
-			<div class="services__note">Доставка щебня от 25т</div>
+			<div class="services__note">Доставка от 25т</div>
 		</section>
 		<section class="servicesEquipment" id="servicesEquipment">
 			<h2 class="servicesEquipment__title">Услуги и аренда <br> спецтехники</h2>
 			<div class="servicesEquipment__ordersEquipment">
 				<div class="orderEquipment">
 					<div class="orderEquipment__title">Самосвалы</div><img class="orderEquipment__image" src="./images/equipments/Самосвал.png" alt="Самосвалы"/>
-					<div class="orderEquipment__price">1500 руб/час (автопарк — 11 самосвалов!)</div>
+					<div class="orderEquipment__price">1500 руб./час</div>
 				</div>
 				<div class="orderEquipment">
 					<div class="orderEquipment__title">Погрузчик</div><img class="orderEquipment__image" src="./images/equipments/Погрузчик.png" alt="Погрузчик"/>
-					<div class="orderEquipment__price">1500 руб/час</div>
+					<div class="orderEquipment__price">1500 руб./час</div>
 				</div>
 				<div class="orderEquipment">
 					<div class="orderEquipment__title">Экскаватор</div><img class="orderEquipment__image" src="./images/equipments/Экскаватор.png" alt="Экскаватор"/>
-					<div class="orderEquipment__price">1600-1900 руб/час</div>
+					<div class="orderEquipment__price">1600-1900 руб./час</div>
 				</div>
 				<div class="orderEquipment">
 					<div class="orderEquipment__title">Бульдозер</div><img class="orderEquipment__image" src="./images/equipments/Бульдозер.png" alt="Бульдозер"/>
-					<div class="orderEquipment__price">3000 руб/час</div>
+					<div class="orderEquipment__price">3000 руб./час</div>
 				</div>
 			</div>
 			<div class="servicesEquipment__info">
@@ -286,6 +286,6 @@
 						</svg></a></div>
 			</div>
 		</footer>
-		<script src="./js/main.js?v=1558874955362"></script>
+		<script src="./js/main.js?v=1558952375546"></script>
 	</body>
 </html>
