--- a/4-season/index.html
+++ b/4-season/index.html
@@ -30,7 +30,7 @@
 			</div>
 			<nav class="navbar" id="mainResponsiveNavbar">
 				<div class="navbar__mobileTitle" id="mainResponsiveNavbarTitle">Меню</div>
-				<button class="navbar__button" id="responsiveMenuButtonToggle"><span class="navbar__buttonLine"></span><span class="navbar__buttonLine"></span><span class="navbar__buttonLine"></span></button><a class="navbar__item" href="/4-season">Главная</a><a class="navbar__item" href="#floorMaterials">Напольное покрытие</a><a class="navbar__item" href="#accessories">Комплектующие</a><a class="navbar__item" href="#supply">Поставка</a><a class="navbar__item" href="/4-season/garden-tools.html">Садовые товары</a>
+				<button class="navbar__button" id="responsiveMenuButtonToggle"><span class="navbar__buttonLine"></span><span class="navbar__buttonLine"></span><span class="navbar__buttonLine"></span></button><a class="navbar__item" href="/4-season/index.html">Главная</a><a class="navbar__item" href="#floorMaterials">Напольное покрытие</a><a class="navbar__item" href="#accessories">Комплектующие</a><a class="navbar__item" href="#supply">Поставка</a><a class="navbar__item" href="/4-season/garden-tools.html">Садовые товары</a>
 			</nav>
 		</header>
 		<main class="mainSection" id="main">
