--- a/4-season/garden-tools.html
+++ b/4-season/garden-tools.html
@@ -30,7 +30,7 @@
 			</div>
 			<nav class="navbar" id="mainResponsiveNavbar">
 				<div class="navbar__mobileTitle" id="mainResponsiveNavbarTitle">Меню</div>
-				<button class="navbar__button" id="responsiveMenuButtonToggle"><span class="navbar__buttonLine"></span><span class="navbar__buttonLine"></span><span class="navbar__buttonLine"></span></button><a class="navbar__item" href="/4-season">Главная</a><a class="navbar__item" href="#supply">Оптовые поставки</a><a class="navbar__item" href="#accessories">Ассортимент</a><a class="navbar__item" href="#additionalInfo">Прайс лист</a><a class="navbar__item" href="/4-season">Террасная доска ДПК</a>
+				<button class="navbar__button" id="responsiveMenuButtonToggle"><span class="navbar__buttonLine"></span><span class="navbar__buttonLine"></span><span class="navbar__buttonLine"></span></button><a class="navbar__item" href="/4-season/index.html">Главная</a><a class="navbar__item" href="#supply">Оптовые поставки</a><a class="navbar__item" href="#accessories">Ассортимент</a><a class="navbar__item" href="#additionalInfo">Прайс лист</a><a class="navbar__item" href="/4-season">Террасная доска ДПК</a>
 			</nav>
 		</header>
 		<main class="mainSection mainSection_garden" id="supply">
