--- a/4-season/garden-tools.html
+++ b/4-season/garden-tools.html
@@ -4,10 +4,9 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width">
-		<meta name="description" content="Компания ООО «ГринДекинг» занимается поставкой нерудных материалов (щебень, песок, грунт, ОПГС) и предлагает услуги строительной и специальной техники (самосвалы, погрузчик, экскаватор, бульдозер) в г. Нижний Новгород и по Нижегородской области.">
-		<meta name="keywords" content="ГринДекинг, перевозка, щебень, песок, аренда спец техники">
+		<meta name="description" content="Компания «4 Сезона» осуществляет оптовую продажу. В ассортименте представлены товары собственного производства.">
 		<meta name="theme-color" content="#EBEBEB">
-		<title>ГринДекинг — Перевозка щебня и песка. Аренда спец техники.</title>
+		<title>4 Сезона. Оптовые поставки. Садово-огородный инвентарь.</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:500,900&amp;amp;subset=cyrillic-ext">
 		<link rel="stylesheet" href="./css/main.css?v=1560250295461">
 	</head>
