--- a/4-season/index.html
+++ b/4-season/index.html
@@ -4,10 +4,9 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width">
-		<meta name="description" content="Компания ООО «ГринДекинг» занимается поставкой нерудных материалов (щебень, песок, грунт, ОПГС) и предлагает услуги строительной и специальной техники (самосвалы, погрузчик, экскаватор, бульдозер) в г. Нижний Новгород и по Нижегородской области.">
-		<meta name="keywords" content="ГринДекинг, перевозка, щебень, песок, аренда спец техники">
+		<meta name="description" content="Напольные покрытия из древесно-полимерного композита (ДПК)">
 		<meta name="theme-color" content="#EBEBEB">
-		<title>ГринДекинг — Перевозка щебня и песка. Аренда спец техники.</title>
+		<title>Компания «4 Сезона»</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:500,900&amp;amp;subset=cyrillic-ext">
 		<link rel="stylesheet" href="./css/main.css?v=1560250295729">
 	</head>
