--- a/neeo-play/index.html
+++ b/neeo-play/index.html
@@ -5,17 +5,30 @@
 	<title>Neeo</title>
 <!--	<script src="./js/vendor/lottie_svg.min.js" type="text/javascript"></script>-->
 <!--	<script src="./js/vendor/lottie_canvas.min.js" type="text/javascript"></script>-->
-	<script src="./js/vendor/lottie.min.js" type="text/javascript"></script>
-	<script src="./js/main.js" type="text/javascript"></script>
-
 	<link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 <body>
-<div class="main-block">
+
+<div id="loadingBlock" class="loading-block">
+	<div class="loading-block__loader">
+		<img src="./assets/loader.svg" alt="loader">
+	</div>
+	<div class="loading-block__loader">
+		<img src="./assets/loader.svg" alt="loader">
+	</div>
+	<div class="loading-block__loader">
+		<img src="./assets/loader.svg" alt="loader">
+	</div>
+	<div id="loadingProgressText" class="loading-block__progress-text">
+		0%
+	</div>
+</div>
+
+<div id="mainBlock" class="main-block">
 	<a id="link1" class="main-block__link main-block__link_play1" href="/play1"></a>
 	<a id="link2" class="main-block__link main-block__link_play2" href="/play2"></a>
 	<div id="background" class="main-block__wrap-video">
-		<video class="main-block__video" autoplay loop="loop">
+		<video id="videoBackground" class="main-block__video" muted loop="loop" preload="auto">
 			<source src="./assets/bg.mp4" type="video/mp4">
 		</video>
 	</div>
@@ -26,5 +39,8 @@
 	<div id="neeoDisappear2" class="main-block__neeo main-block__neeo_disappear hidden"></div>
 	<div id="foreground" class="main-block_foreground"></div>
 </div>
+
+<script src="./js/main.js" type="text/javascript"></script>
+<script id="scriptLottie" src="./js/vendor/lottie.min.js" type="text/javascript" async></script>
 </body>
 </html>
