--- a/neeo-play/index.html
+++ b/neeo-play/index.html
@@ -24,20 +24,22 @@
 	</div>
 </div>
 
-<div id="mainBlock" class="main-block">
-	<a id="link1" class="main-block__link main-block__link_play1" href="/play1"></a>
-	<a id="link2" class="main-block__link main-block__link_play2" href="/play2"></a>
-	<div id="background" class="main-block__wrap-video">
-		<video id="videoBackground" class="main-block__video" muted loop="loop" preload="auto">
-			<source src="./assets/bg.mp4" type="video/mp4">
-		</video>
+<div class="main-wrap">
+	<div id="mainBlock" class="main-block">
+		<a id="link1" class="main-block__link main-block__link_play1" href="/play1"></a>
+		<a id="link2" class="main-block__link main-block__link_play2" href="/play2"></a>
+		<div id="background" class="main-block__wrap-video">
+			<video id="videoBackground" class="main-block__video" muted loop="loop" preload="auto">
+				<source src="./assets/bg.mp4" type="video/mp4">
+			</video>
+		</div>
+		<div id="neeoCome" class="main-block__neeo main-block__neeo_come"></div>
+		<div id="neeoStill" class="main-block__neeo main-block__neeo_still hidden"></div>
+		<div id="neeoDisappearStart" class="main-block__neeo main-block__neeo_disappear hidden"></div>
+		<div id="neeoDisappear1" class="main-block__neeo main-block__neeo_disappear hidden"></div>
+		<div id="neeoDisappear2" class="main-block__neeo main-block__neeo_disappear hidden"></div>
+		<div id="foreground" class="main-block_foreground"></div>
 	</div>
-	<div id="neeoCome" class="main-block__neeo main-block__neeo_come"></div>
-	<div id="neeoStill" class="main-block__neeo main-block__neeo_still hidden"></div>
-	<div id="neeoDisappearStart" class="main-block__neeo main-block__neeo_disappear hidden"></div>
-	<div id="neeoDisappear1" class="main-block__neeo main-block__neeo_disappear hidden"></div>
-	<div id="neeoDisappear2" class="main-block__neeo main-block__neeo_disappear hidden"></div>
-	<div id="foreground" class="main-block_foreground"></div>
 </div>
 
 <script src="./js/main.js" type="text/javascript"></script>
