--- a/neeo-play/index.html
+++ b/neeo-play/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 <body>
+<div id="debug" style="z-index: 99999999; position: absolute;"></div>
 
 <div id="loadingBlock" class="loading-block">
 	<div class="loading-block__loader">
