--- a/neeo-play/assets/neeo-come/demo.html
+++ b/neeo-play/assets/neeo-come/demo.html
@@ -17,6 +17,7 @@
             transform: translate3d(0,0,0);
             text-align: center;
             opacity: 1;
+			background-color: black;
         }
 
     </style>
