--- a/neeo-play/index.html
+++ b/neeo-play/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 <body>
+<div style="z-index: 99999999; position: absolute; color: red;"></div>
+<br>
 <div id="debug" style="z-index: 99999999; position: absolute; color: red;"></div>
 
 <div id="loadingBlock" class="loading-block">
