--- a/neeo-play/index.html
+++ b/neeo-play/index.html
@@ -11,20 +11,20 @@
 <div style="z-index: 99999999; position: absolute; top: 0; color: red;">test build 1.0.4</div>
 <div id="debug" style="z-index: 99999999; position: absolute; top: 20px; color: red;"></div>
 
-<div id="loadingBlock" class="loading-block">
-	<div class="loading-block__loader">
-		<img src="./assets/loader.svg" alt="loader">
-	</div>
-	<div class="loading-block__loader">
-		<img src="./assets/loader.svg" alt="loader">
-	</div>
-	<div class="loading-block__loader">
-		<img src="./assets/loader.svg" alt="loader">
-	</div>
-	<div id="loadingProgressText" class="loading-block__progress-text">
-		0%
-	</div>
-</div>
+<!--<div id="loadingBlock" class="loading-block">-->
+<!--	<div class="loading-block__loader">-->
+<!--		<img src="./assets/loader.svg" alt="loader">-->
+<!--	</div>-->
+<!--	<div class="loading-block__loader">-->
+<!--		<img src="./assets/loader.svg" alt="loader">-->
+<!--	</div>-->
+<!--	<div class="loading-block__loader">-->
+<!--		<img src="./assets/loader.svg" alt="loader">-->
+<!--	</div>-->
+<!--	<div id="loadingProgressText" class="loading-block__progress-text">-->
+<!--		0%-->
+<!--	</div>-->
+<!--</div>-->
 
 <div class="main-wrap">
 	<div id="mainBlock" class="main-block">
