--- a/neeo-play/index.html
+++ b/neeo-play/index.html
@@ -31,7 +31,7 @@
 		<a id="link1" class="main-block__link main-block__link_play1" href="/play1"></a>
 		<a id="link2" class="main-block__link main-block__link_play2" href="/play2"></a>
 		<div id="background" class="main-block__wrap-video">
-			<video id="videoBackground" class="main-block__video" muted loop="loop" preload="auto">
+			<video id="videoBackground" class="main-block__video">
 				<source src="./assets/bg.mp4" type="video/mp4">
 			</video>
 		</div>
