--- a/neeo-play/index.html
+++ b/neeo-play/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 <body>
-<div style="z-index: 99999999; position: absolute; top: 0; color: red;">test build 1.0.4</div>
+<div style="z-index: 99999999; position: absolute; top: 0; color: red;">test build 1.0.5</div>
 <div id="debug" style="z-index: 99999999; position: absolute; top: 20px; color: red;"></div>
 
 <!--<div id="loadingBlock" class="loading-block">-->
@@ -31,7 +31,7 @@
 		<a id="link1" class="main-block__link main-block__link_play1" href="/play1"></a>
 		<a id="link2" class="main-block__link main-block__link_play2" href="/play2"></a>
 		<div id="background" class="main-block__wrap-video">
-			<video id="videoBackground" class="main-block__video">
+			<video id="videoBackground" class="main-block__video" muted loop="loop" preload="auto">
 				<source src="./assets/bg.mp4" type="video/mp4">
 			</video>
 		</div>
